--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,19 @@
         </activity>
 
         <activity android:name=".LogInActivity" />
+
+        <service
+            android:name=".MatDienService" >
+        </service>
+
+        <receiver
+            android:name=".TextSMSCommunication$TextSMSReceiverHandler"
+            android:enabled="true"
+            >
+            <intent-filter android:priority="999">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
     </application>
     
     <uses-permission android:name="android.permission.SEND_SMS" />
