Correct some errors with MatDienService and AndroidManifest files in previous commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </service>
 
         <receiver
-            android:name=".TextSMSCommunication$TextSMSReceiverHandler"
+            android:name=".communication.TextSMSCommunication$TextSMSReceiverHandler"
             android:enabled="true"
             >
             <intent-filter android:priority="999">
