--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity
             android:name=".activities.subscriberactivity.SubscriberActionListActivity"
             android:label="@string/title_subscriberaction_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.subscriberactivity.SubscriberActionDetailActivity"
             android:label="@string/title_subscriberaction_detail"
@@ -56,6 +56,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.beekill.matdienapp.activities.subscriberactivity.SubscriberActionListActivity" />
         </activity>
+        <activity android:name=".activities.NotificationActivity"></activity>
     </application>
 
 </manifest>
