--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
+        android:name=".MatDienApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".MatDienApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,10 +37,11 @@
 
         <activity android:name=".activities.NotificationActivity" />
         <activity
-            android:name=".activities.Admin.AdminActionActivity"
+            android:name=".activities.admin.AdminActionActivity"
             android:label="@string/title_activity_admin_action"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.ChangePasswordActivity"></activity>
+        <activity android:name=".activities.ChangePasswordActivity" />
+        <activity android:name=".activities.devices.DevicesActivity"></activity>
     </application>
 
 </manifest>
