--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".MatDienApplication"
@@ -41,7 +42,12 @@
             android:label="@string/title_activity_admin_action"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activities.ChangePasswordActivity" />
-        <activity android:name=".activities.devices.DevicesActivity"></activity>
+        <activity android:name=".activities.devices.DevicesActivity" />
+        <activity android:name=".qrreader.QRActivity" />
+
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="barcode" />
     </application>
 
 </manifest>
