--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:name=".MatDienApplication"
         android:allowBackup="true"
@@ -36,18 +40,30 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activities.NotificationActivity" />
+        <activity
+            android:name=".activities.NotificationActivity"
+            android:excludeFromRecents="true"/>
+
         <activity
             android:name=".activities.admin.AdminActionActivity"
             android:label="@string/title_activity_admin_action"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".activities.ChangePasswordActivity" />
+
         <activity android:name=".activities.devices.DevicesActivity" />
+
         <activity android:name=".qrreader.QRActivity" />
 
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
+
+        <activity
+            android:name=".activities.AddDeviceDialog"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"
+            android:excludeFromRecents="true"
+            ></activity>
     </application>
 
 </manifest>
